--- a/css/dimens.scss
+++ b/css/dimens.scss
@@ -120,7 +120,7 @@
         --header-menu-button-height:60px;
         --upper-header-height: 70px;    //Mobile only
         --logo-size: 100px;
-        --tiny-icon-size: 20px;
+        --tiny-icon-size: 25px;
         --small-icon-size: 40px;
 
 
@@ -160,7 +160,7 @@
         --header-menu-button-height:30px;
         --upper-header-height: 35px;    //Mobile only
         --logo-size: 50px;
-        --tiny-icon-size: 10px;
+        --tiny-icon-size: 15px;
         --small-icon-size: 20px;
 
 
